# slag

./: .gitignore  AUTHORS  CHANGES  DESCRIPTION  Makefile.cvs  Makefile.in  README  README.MacOSX  README.NetBSD  configure.ac  slag.pro.in  slag.qrc
examples/: basic_kit.xml
l10n/: Makefile  fr.qm  fr.ts
sounds/: __details_and_attribution.txt
src/: Doxyfile  Slag.cpp  Slag.h  common.h  config.h  config.h.in  constants.h
src/audio_IO/: AudioDriver.cpp  AudioDriver.h  AudioDriverFactory.cpp  AudioDriverFactory.h  AudioFile.h  AudioFileExceptions.h  ChannelJackDriver.cpp  ChannelJackDriver.h  Exceptions.h  JackDriver.cpp  JackDriver.h  LibaoDriver.cpp  LibaoDriver.h  LibaoWrapper.cpp  LibaoWrapper.h  NullDriver.cpp  NullDriver.h  RingBufferDriver.cpp  RingBufferDriver.h  RtAudio.cpp  RtAudio.h  RtAudioDriver.cpp  RtAudioDriver.h  WavFile.cpp  WavFile.h  WavFileOutput.cpp  WavFileOutput.h
src/audio_engine/: AudibleElem.cpp  AudibleElem.h  Channel.cpp  Channel.h  ChannelPtrList.h  Pad.cpp  Pad.h  Part.cpp  Part.h  Pattern.cpp  Pattern.h  SafeData.h  SafelyDeletable.h  Serialize.cpp  Serialize.h  Song.cpp  Song.h  SongFileExceptions.h  SongReader.cpp  SongReader.h  UntitledList.cpp  UntitledList.h
src/config/: Config.cpp  Config.h
src/gui/: ChannelMenu.cpp  ChannelMenu.h  ChannelRow.cpp  ChannelRow.h  Fader.cpp  Fader.h  MainWidget.cpp  MainWidget.h  NamedButton.cpp  NamedButton.h  PadButton.cpp  PadButton.h  PanFader.cpp  PanFader.h  PartMenu.cpp  PartMenu.h  PatternRow.cpp  PatternRow.h  PatternRowStack.cpp  PatternRowStack.h  RowContext.h  SndFileFormatDialog.cpp  SndFileFormatDialog.h  SpinSlider.cpp  SpinSlider.h  StringListEdit.cpp  StringListEdit.h  TimeLine.cpp  TimeLine.h  ToolBar.cpp  ToolBar.h
src/gui/preferences/: preferences_dialog.ui  preferences_dialog.ui.h
src/gui/song_properties/: song_properties_dialog.ui  song_properties_dialog.ui.h
test_programs/test_gui_1/: basic_kit.xml  essai.xml  main.cpp  test_gui_1.pro
